[level 3] Title: [카카오 인턴] 보석 쇼핑, Time: 68.74 ms, Memory: 82.8 MB -BaekjoonHub